# chronon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/actions/lecerf-runner/: action.yml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/resolved/: jit-branch-regression.md  test6-scheduler-hang.md
.planning/phases/13-time-travel/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-03-PLAN.md  13-04-PLAN.md  13-04-SUMMARY.md  13-05-PLAN.md  13-06-PLAN.md  13-VERIFICATION.md
.planning/phases/14-jit-depth/: 14-02-SUMMARY.md  14-03-SUMMARY.md  14-04-SUMMARY.md  14-05-SUMMARY.md  14-06-SUMMARY.md  14-07-PLAN.md  14-07-SUMMARY.md  14-PHASE-SUMMARY.md  14-VERIFICATION.md
.planning/phases/16-python-ci/: 16-01-SUMMARY.md  16-02-SUMMARY.md  16-03-SUMMARY.md  16-04-SUMMARY.md  16-05-SUMMARY.md  PHASE-SUMMARY.md
docker/: .dockerignore  Dockerfile  runner.py
examples/lecerf-ci-example/: README.md  requirements.txt
examples/lecerf-ci-example/.github/workflows/: firmware-test.yml
examples/lecerf-ci-example/tests/: conftest.py  test_blink.py  test_fib.py  test_uart.py
firmware/: run_all.sh
firmware/test1/: build.sh  main.c  startup.s
firmware/test11_nvic_irq/: build.sh  link.ld  main.c  startup.s
firmware/test12_dsp_fft/: build.sh  main.c  startup.s
firmware/test13_zephyr_lite/: build.sh  link.ld  main.c  startup.s  zephyr_lite.c  zephyr_lite.h
firmware/test14_eth_icmp/: build.sh  main.c  startup.s
firmware/test2/: build.sh  main.c  startup.s
firmware/test3/: build.sh  main.c  startup.s
firmware/test4/: build.sh  main.c  startup.s
firmware/test5/: build.sh  link.ld  main.c  startup.s
firmware/test6/: build.sh  main.c  startup.s
firmware/test8_fpu/: build.sh  main.c
firmware/test9_freertos_ipc/: FreeRTOSConfig.h  build.sh  link.ld  main.c  minlibc.c  startup.s
firmware/test_tt/: build.sh  link.ld  main.c  startup.s
include/core/: bus.h  codegen.h  cpu.h  decoder.h  fpu.h  jit.h  nvic.h  run.h  tt.h  types.h
include/periph/: eth.h  mpu.h  scb.h  systick.h  uart.h
python/lecerf/: board.py  run_result.py
python/tests/: conftest.py  test_blink.py  test_registers.py  test_uart.py
src/core/: board.c  bus.c  codegen.c  cpu.c  decoder.c  executor.c  fpu.c  jit.c  nvic.c  run.c  tt.c
src/periph/: eth.c  mpu.c  scb.c  systick.c  uart.c
tests/: CMakeLists.txt  test_bus.c  test_decoder.c  test_executor.c  test_harness.h  test_jit_abi.c  test_jit_bench.c  test_jit_chain.c  test_jit_flags.c  test_jit_ldr_str.c  test_jit_push_pop.c  test_jit_systick.c  test_t32.c  test_tt_rewind.c  test_tt_snapshot.c
tools/: main.c
